Edited maximum search container width for cleaner display on larger screens + adjusted width of forward, backward, and refresh buttons to avoid appearing too large on wide screens

--- a/style.css
+++ b/style.css
@@ -228,17 +228,17 @@ button {
 #refresh-button {
     height: 30px;
     font-size: 21px;
-    width: 33%;
+    width: 30px;
 }
 
 #back-button, .forward-button {
     height: 30px;
     font-size: 21px;
-    width: 33%;
+    width: 25px;
 }
 
 .search-container {
-   width: clamp(505px, 38.7vw, 600px);
+   width: clamp(505px, 38.7vw, 850px);
    height: 70%;
    display: flex;
    align-items: center;
